--- a/src/main/resources/assets/teslacorelib/lang/en_US.lang
+++ b/src/main/resources/assets/teslacorelib/lang/en_US.lang
@@ -2,6 +2,8 @@ itemGroup.tabTesla_Core_Lib=Tesla Core Lib
 
 item.teslacorelib_wrench.name=Tesla Wrench
 item.teslacorelib_battery.name=Tesla Battery
+item.teslacorelib_base_addon.name=Base Addon
+item.teslacorelib_machine_case.name=Machine Case
 
 tile.teslacorelib_test_machine.name=Test All-in-One Machine
 tile.teslacorelib_creative_generator.name=Creative Generator
