--- a/src/main/resources/assets/teslacorelib/lang/en_US.lang
+++ b/src/main/resources/assets/teslacorelib/lang/en_US.lang
@@ -6,6 +6,11 @@ item.teslacorelib_gear_iron.name=Iron Gear
 item.teslacorelib_gear_gold.name=Gold Gear
 item.teslacorelib_gear_diamond.name=Diamond Gear
 
+item.teslacorelib_energy_tier1.name=Energy Upgrade I
+item.teslacorelib_energy_tier2.name=Energy Upgrade II
+item.teslacorelib_speed_tier1.name=Speed Upgrade I
+item.teslacorelib_speed_tier2.name=Speed Upgrade II
+
 item.teslacorelib_wrench.name=Tesla Wrench
 item.teslacorelib_battery.name=Tesla Battery
 item.teslacorelib_base_addon.name=Base Addon
