--- a/src/main/resources/assets/teslacorelib/lang/en_US.lang
+++ b/src/main/resources/assets/teslacorelib/lang/en_US.lang
@@ -1,20 +1,27 @@
 itemGroup.tesla_core_lib=Tesla Core Lib
 
-item.teslacorelib_gear_wood.name=Wood Gear
-item.teslacorelib_gear_stone.name=Stone Gear
-item.teslacorelib_gear_iron.name=Iron Gear
-item.teslacorelib_gear_gold.name=Gold Gear
-item.teslacorelib_gear_diamond.name=Diamond Gear
+item.teslacorelib.gear_wood.name=Wood Gear
+item.teslacorelib.gear_stone.name=Stone Gear
+item.teslacorelib.gear_iron.name=Iron Gear
+item.teslacorelib.gear_gold.name=Gold Gear
+item.teslacorelib.gear_diamond.name=Diamond Gear
+item.teslacorelib.gear_emerald.name=Emerald Gear
 
-item.teslacorelib_energy_tier1.name=Energy Upgrade I
-item.teslacorelib_energy_tier2.name=Energy Upgrade II
-item.teslacorelib_speed_tier1.name=Speed Upgrade I
-item.teslacorelib_speed_tier2.name=Speed Upgrade II
+item.teslacorelib.powder_coal.name=Coal Powder
+item.teslacorelib.powder_iron.name=Iron Powder
+item.teslacorelib.powder_gold.name=Gold Powder
+item.teslacorelib.powder_diamond.name=Diamond Powder
+item.teslacorelib.powder_emerald.name=Emerald Powder
 
-item.teslacorelib_wrench.name=Tesla Wrench
-item.teslacorelib_battery.name=Tesla Battery
-item.teslacorelib_base_addon.name=Base Addon
-item.teslacorelib_machine_case.name=Machine Case
+item.teslacorelib.energy_tier1.name=Energy Upgrade I
+item.teslacorelib.energy_tier2.name=Energy Upgrade II
+item.teslacorelib.speed_tier1.name=Speed Upgrade I
+item.teslacorelib.speed_tier2.name=Speed Upgrade II
 
-tile.teslacorelib_test_machine.name=Test All-in-One Machine
-tile.teslacorelib_creative_generator.name=Creative Generator
+item.teslacorelib.wrench.name=Tesla Wrench
+item.teslacorelib.battery.name=Tesla Battery
+item.teslacorelib.base_addon.name=Base Addon
+item.teslacorelib.machine_case.name=Machine Case
+
+tile.teslacorelib.test_machine.name=Test All-in-One Machine
+tile.teslacorelib.creative_generator.name=Creative Generator
