--- a/src/main/resources/assets/teslacorelib/lang/en_US.lang
+++ b/src/main/resources/assets/teslacorelib/lang/en_US.lang
@@ -15,6 +15,51 @@ item.teslacorelib.powder_gold.name=Gold Powder
 item.teslacorelib.powder_diamond.name=Diamond Powder
 item.teslacorelib.powder_emerald.name=Emerald Powder
 
+#Base Metals Powders
+item.teslacorelib.powder_adamantine.name=Adamantine Powder
+item.teslacorelib.powder_antimony.name=Antimony Powder
+item.teslacorelib.powder_aquarium.name=Aquarium Powder
+item.teslacorelib.powder_bismuth.name=Bismuth Powder
+item.teslacorelib.powder_brass.name=Brass Powder
+item.teslacorelib.powder_bronze.name=Bronze Powder
+item.teslacorelib.powder_coldiron.name=Coldiron Powder
+item.teslacorelib.powder_copper.name=Copper Powder
+item.teslacorelib.powder_cupronickel.name=Cupronickel Powder
+item.teslacorelib.powder_electrum.name=Electrum Powder
+item.teslacorelib.powder_invar.name=Invar Powder
+item.teslacorelib.powder_lead.name=Lead Powder
+item.teslacorelib.powder_mercury.name=Mercury Powder
+item.teslacorelib.powder_mithril.name=Mithril Powder
+item.teslacorelib.powder_nickel.name=Nickel Powder
+item.teslacorelib.powder_pewter.name=Pewter Powder
+item.teslacorelib.powder_platinum.name=Platinum Powder
+item.teslacorelib.powder_silver.name=Silver Powder
+item.teslacorelib.powder_starsteel.name=Starsteel Powder
+item.teslacorelib.powder_steel.name=Steel Powder
+item.teslacorelib.powder_tin.name=Tin Powder
+item.teslacorelib.powder_zinc.name=Zinc Powder
+
+#Modern Metals Powders
+item.teslacorelib.powder_aluminum.name=Aluminium Powder
+item.teslacorelib.powder_aluminum_brass.name=Aluminium Brass Powder
+item.teslacorelib.powder_cadmium.name=Cadmium Powder
+item.teslacorelib.powder_chromium.name=Chromium Powder
+item.teslacorelib.powder_galvanized_steel.name=Galvanized Steel Powder
+item.teslacorelib.powder_iridium.name=Iridium Powder
+item.teslacorelib.powder_magnesium.name=Magnesium Powder
+item.teslacorelib.powder_manganese.name=Manganese Powder
+item.teslacorelib.powder_nichrome.name=Nichrome Powder
+item.teslacorelib.powder_osmium.name=Osmium Powder
+item.teslacorelib.powder_plutonium.name=Plutonium Powder
+item.teslacorelib.powder_rutile.name=Rutile Powder
+item.teslacorelib.powder_stainless_steel.name=Stainless Steel Powder
+item.teslacorelib.powder_tantalum.name=Tantalum Powder
+item.teslacorelib.powder_titanium.name=Titanium Powder
+item.teslacorelib.powder_tungsten.name=Tungsten Powder
+item.teslacorelib.powder_uranium.name=Uranium Powder
+item.teslacorelib.powder_zirconium.name=Zirconium Powder
+
+
 item.teslacorelib.sheet_iron.name=Iron Sheet
 item.teslacorelib.sheet_gold.name=Gold Sheet
 item.teslacorelib.sheet_diamond.name=Diamond Sheet
